welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:6: error: type mismatch;
 found   : Unit
 required: Int
	if (in1020(a) == false && in1020(b) == false) {
        ^